# CrossPlatformGUI

./: CMakeLists.txt  main.cpp  main.qml
